Two modifications left

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
     "require": {
-        "phpmailer/phpmailer": "*",
-        "sendinblue/sendinblue-api-bundle": "*"
+        "twilio/sdk": "*"
     }
 }
